@@ -4,5 +4,4 @@ this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="name"/>
     <field name="type"/>
-    <field name="active" tree_invisible="1"/>
 </tree>
