@@ -5,5 +5,4 @@ this repository contains the full copyright notices and license terms. -->
     <field name="name"/>
     <field name="type"/>
     <field name="url"/>
-    <field name="active" tree_invisible="1"/>
 </tree>
