@@ -10,6 +10,5 @@ this repository contains the full copyright notices and license terms. -->
     <field name="interval_number"/>
     <field name="interval_type"/>
     <field name="number_calls"/>
-    <field name="active"/>
     <button name="run_once" string="Run Once" tree_invisible="1"/>
 </tree>
