@@ -5,5 +5,4 @@ this repository contains the full copyright notices and license terms. -->
     <field name="button"/>
     <field name="record_id"/>
     <field name="user"/>
-    <field name="active" tree_invisible="1"/>
 </tree>
