@@ -5,5 +5,4 @@ this repository contains the full copyright notices and license terms. -->
     <field name="name"/>
     <field name="code"/>
     <field name="type"/>
-    <field name="active"/>
 </tree>
