@@ -8,5 +8,4 @@ this repository contains the full copyright notices and license terms. -->
     <field name="on_create"/>
     <field name="on_write"/>
     <field name="on_delete"/>
-    <field name="active"/>
 </tree>
