@@ -3,5 +3,4 @@
 this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="complete_name" icon="icon" expand="1"/>
-    <field name="active" tree_invisible="1"/>
 </tree>
